terraform/azureControlPlaneHome/jumphost.tf
# -----------------------------------------------------------------------------
# "jumpbox" configuration
# -----------------------------------------------------------------------------

resource "azurerm_public_ip" "jumpbox" {
  name                         = "jumpbox-public-ip"
  location                     = "${var.location}"
  resource_group_name          = "${azurerm_resource_group.rg.name}"
  public_ip_address_allocation = "static"
  domain_name_label            = "${azurerm_resource_group.rg.name}-ssh"
  tags                         = "${var.tags}"
}

resource "azurerm_network_security_group" "jumpbox" {
  name                = "jumpbox-ssh-access"
  location            = "${var.location}"
  resource_group_name = "${azurerm_resource_group.rg.name}"
  tags                = "${var.tags}"
}

resource "azurerm_network_security_rule" "ssh_access" {
  name                        = "ssh-access-rule"
  network_security_group_name = "${azurerm_network_security_group.jumpbox.name}"
  direction                   = "Inbound"
  access                      = "Allow"
  priority                    = 200
  source_address_prefix       = "*"
  source_port_range           = "*"
  destination_address_prefix  = "${azurerm_network_interface.jumpbox.private_ip_address}"
  destination_port_range      = "22"
  protocol                    = "TCP"
  resource_group_name         = "${azurerm_resource_group.rg.name}"
}

resource "azurerm_network_security_rule" "www_access" {
  name                        = "www-access-rule"
  network_security_group_name = "${azurerm_network_security_group.jumpbox.name}"
  direction                   = "Inbound"
  access                      = "Allow"
  priority                    = 201
  source_address_prefix       = "*"
  source_port_range           = "*"
  destination_address_prefix  = "${azurerm_network_interface.jumpbox.private_ip_address}"
  destination_port_range      = "80"
  protocol                    = "TCP"
  resource_group_name         = "${azurerm_resource_group.rg.name}"
}

# resource "azurerm_network_security_rule" "admin_access" {
#   name                        = "remote-admin-access-rule"
#   network_security_group_name = "${azurerm_network_security_group.unitingAzureFoundation-nsg.name}"
#   resource_group_name         = "${azurerm_resource_group.rg.name}"
#   direction                   = "Inbound"
#   access                      = "Allow"
#   priority                    = 200
#   #source_address_prefixes     = ["${var.unitingPublicIPrange}"]
#   source_address_prefix       = "*"
#   source_port_range           = "*"
#   destination_address_prefixes  = ["${var.subnet_prefixes}"]
#   destination_port_ranges      = ["22", "3389"]
#   protocol                    = "TCP"
# }

resource "azurerm_network_interface" "jumpbox" {
  name                      = "jumpbox-nic"
  location                  = "${var.location}"
  resource_group_name       = "${azurerm_resource_group.rg.name}"
  network_security_group_id = "${azurerm_network_security_group.jumpbox.id}"

  ip_configuration {
    name                          = "IPConfiguration"
    subnet_id                     = "${module.network.vnet_subnets[0]}"
    private_ip_address_allocation = "dynamic"
    public_ip_address_id          = "${azurerm_public_ip.jumpbox.id}"
  }

  tags                      = "${var.tags}"
}

resource "azurerm_virtual_machine" "jumpbox" {
  name                          = "jumpbox"
  location                      = "${var.location}"
  resource_group_name           = "${azurerm_resource_group.rg.name}"
  network_interface_ids         = ["${azurerm_network_interface.jumpbox.id}"]
  vm_size                       = "Standard_DS1_v2"
  delete_os_disk_on_termination = true

  storage_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "16.04-LTS"
    version   = "latest"
  }

  storage_os_disk {
    name              = "jumpbox-osdisk"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }

  os_profile {
    computer_name  = "jumpbox"
    admin_username = "azureuser"
    admin_password = "Password1234!"
  }

  os_profile_linux_config {
    disable_password_authentication = true

    ssh_keys {
      path     = "/home/azureuser/.ssh/authorized_keys"
      key_data = "${var.ssh_key_public}"
    }
  }

  tags                          = "${var.tags}"
}
